[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemies/test_enemy_01.png" type="Texture" id=1]
[ext_resource path="res://game/tests/EnemyDummy.gd" type="Script" id=2]
[ext_resource path="res://game/bullets/BulletEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/sfx/enemies/shoot/02enemyshoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/enemies/explosion/01enemyexplosion.wav" type="AudioStream" id=5]



[sub_resource type="CircleShape2D" id=1]
radius = 69.4357

[node name="EnemyDummy" type="Area2D"]
z_index = 40
z_as_relative = false
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )
bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ShootTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="ExplosionTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
